image fix, background needs to fall

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,17 +15,17 @@
         </header>
         <div class="banner">
             <div class="product">
-                <div class="soda" style="--url: url(images/bg1.1.png)">
+                <div class="soda" style="--url: url(https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/459173614_3809169082686253_5656843123378549869_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_ohc=fr_v8s66bCUQ7kNvgH2Ungm&_nc_ht=scontent-jnb2-1.xx&_nc_gid=Al1jAkLOIgKmHEIG7Dlp2Yc&oh=00_AYBrFGkDdtcxmEWnCycqu-KeQoqmSSLTMl2P0RDdVWpdqA&oe=66E74175)">
                 </div>
-                <div class="soda" style="--url: url(images/bg2.1.png)">
+                <div class="soda" style="--url: url(https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/459203603_3809169076019587_1417978166098989270_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=30ekFM0FMMgQ7kNvgG15Nvb&_nc_ht=scontent-jnb2-1.xx&oh=00_AYDtEIFFt90VF0lOQBWHiCrQPdXRkvNEWQwfM-R7uKNUWg&oe=66E76406)">
                 </div>
             </div>
 
 
             <div class="rock">
-                <img src="images/rock1.png" alt="">
-                <img src="images/rock2.png" alt="">
-                <img src="images/rock3.png" alt="">
+                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/459116879_3809169016019593_7708157657280103795_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=NPL4fcwLfkwQ7kNvgEFNJwN&_nc_ht=scontent-jnb2-1.xx&_nc_gid=AaijGfX7RISFwffY3Xicc9K&oh=00_AYBiStK2Lh3zA0y1ZwvVTI02nTiHGxKVaquITC0aSPnlVA&oe=66E76B4F" alt="">
+                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/459051799_3809169019352926_3435899337267300027_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=127cfc&_nc_ohc=gdcaeCXic5MQ7kNvgGKN5xI&_nc_ht=scontent-jnb2-1.xx&_nc_gid=Au-MZ-lUoihRL0zaRoQZPeg&oh=00_AYA3RBHHC1OnPnqnRH0jN1rToFDEqEm7tliaioQqQyzd1A&oe=66E77885" alt="">
+                <img src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/459042745_3809169139352914_1927784729520388401_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=127cfc&_nc_ohc=WWQaovCyOvQQ7kNvgEtNHFt&_nc_ht=scontent-jnb2-1.xx&_nc_gid=A2fTCjNg6d1JaXeD5bATa43&oh=00_AYCwNGDtbNcSannWQ7EiJQGgjKzxlB2VrtAq4PzwOQvbGg&oe=66E74963" alt="">
             </div>
         </div>
 
